--- a/prometheus-deploy.yaml
+++ b/prometheus-deploy.yaml
@@ -29,7 +29,7 @@ spec:
       containers:
         - name: prometheus-server
           #image: registry.smartforce.es.airbusds.corp/prom/prometheus:v2.2.1
-          image: hub.docker.com/r/prom/prometheus:latest
+          image: hub.docker.com/prom/prometheus:latest
           args:
             - '--config.file=/etc/prometheus/prometheus.yml'
             - '--storage.tsdb.path=/prometheus/'
